--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
+        env:
+          TF_VAR_GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_CRED }}
         # with:
         #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
