--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -25,18 +25,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: Setup Terraform
-      #   uses: hashicorp/setup-terraform@v2
-      #   # with:
-      #   #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        # with:
+        #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       # - name: Terraform Format
       #   id: fmt
       #   run: terraform fmt -check
 
-      # - name: Terraform Init
-      #   id: init
-      #   run: terraform init
+      - name: Terraform Init
+        id: init
+        run: terraform init
       
       # - name: Terraform Validate
       #   id: validate
