--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
-        with:
-          cli_config_credentials_token: ${{ steps.auth.outputs.access_token }}
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.access_token }
         # with:
         #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
