--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,9 +14,6 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
-      # - name: 'Use gcloud CLI'
-      #   run: 'gcloud info'
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -27,12 +24,10 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
-        # with:
-        #   cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      # - name: Terraform Format
-      #   id: fmt
-      #   run: terraform fmt -check
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
 
       - name: Terraform Init
         id: init
